throw error when report data empty, improve css for report, attempt to fix full width sidebar on small screens

--- a/src/js/pages/Report/components/Report/components/Header/style/header.scss
+++ b/src/js/pages/Report/components/Report/components/Header/style/header.scss
@@ -14,7 +14,7 @@
     }
 
     /* hide border of second table on smaller screens */
-    @media screen and (max-width: $grid-breakpoints-md) {
+    @media screen and (max-width: $grid-breakpoints-lg) {
         table:nth-of-type(2) {
             border-top: 0;
         }
@@ -30,8 +30,8 @@
         margin-right: 20px;
 
         /* align tables vertically on small screens */
-        @media screen and (max-width: $grid-breakpoints-md) {
-            width: 80%;
+        @media screen and (max-width: $grid-breakpoints-lg) {
+            width: 100%;
             display: block;
         }
 
@@ -44,12 +44,14 @@
             border-bottom: 2px solid $beige-darken;
         }
 
-        td, th {
+        td,
+        th {
             font-weight: normal;
             color: $medium-brown;
             padding: .5rem 5px;
             text-align: left;
-            width: 50%;
+            width: 45%;
+            vertical-align: top;
         }
     }
 }
